# rust-komihash

./: Cargo.toml  LICENSE  README.md
benches/: incremental.rs  oneshot.rs  simple.rs  simple_v4.rs  simple_v5.rs  streamed.rs  streamed_v4.rs  streamed_v5.rs
src/: branch_hint.rs  lib.rs  utils.rs  v4.rs  v5.rs
src/tests/: mod.rs  test_vector.rs  test_vector_v4.rs  test_vector_v5.rs
src/tests/benches/: incremental.rs  mod.rs  oneshot.rs
