[package]
name = "komihash"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust implemenation of komihash"
repository = "https://github.com/thynson/rust-komihash.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1